--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simple Shop</title>
+  <title>Louis Vuitton</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,20 +10,20 @@
   <div class="products">
     <div class="product">
       <img src="images/product1.jpg" alt="Product 1">
-      <h3>Cool Shoes</h3>
-      <p>$49.99</p>
+      <h3>Nano Speedy</h3>
+      <p>$1880.99</p>
       <button onclick="addToCart('Cool Shoes', 49.99)">Add to Cart</button>
     </div>
     <div class="product">
       <img src="images/product2.jpg" alt="Product 2">
-      <h3>Stylish Hat</h3>
-      <p>$19.99</p>
+      <h3>Neverfull MM</h3>
+      <p>$2130.99</p>
       <button onclick="addToCart('Stylish Hat', 19.99)">Add to Cart</button>
     </div>
     <div class="product">
       <img src="images/product3.jpg" alt="Product 3">
-      <h3>Trendy Bag</h3>
-      <p>$79.99</p>
+      <h3>Liv Pochette</h3>
+      <p>$1890.99</p>
       <button onclick="addToCart('Trendy Bag', 79.99)">Add to Cart</button>
     </div>
   </div>
