--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Simple Shop</h1>
+  <h1>Louis Vuitton</h1>
   <div class="products">
     <div class="product">
       <img src="images/product1.jpg" alt="Product 1">
       <h3>Nano Speedy</h3>
       <p>$1880.99</p>
-      <button onclick="addToCart('Cool Shoes', 49.99)">Add to Cart</button>
+      <button onclick="addToCart('Nano Speedy', 1800.99)">Add to Cart</button>
     </div>
     <div class="product">
       <img src="images/product2.jpg" alt="Product 2">
       <h3>Neverfull MM</h3>
       <p>$2130.99</p>
-      <button onclick="addToCart('Stylish Hat', 19.99)">Add to Cart</button>
+      <button onclick="addToCart('Neverfull MM', 2130.99)">Add to Cart</button>
     </div>
     <div class="product">
       <img src="images/product3.jpg" alt="Product 3">
       <h3>Liv Pochette</h3>
       <p>$1890.99</p>
-      <button onclick="addToCart('Trendy Bag', 79.99)">Add to Cart</button>
+      <button onclick="addToCart('Liv Pochette', 1890.99)">Add to Cart</button>
     </div>
   </div>
   <h2>Cart</h2>
